[package]
name = "transaction-scheduler"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]

[dependencies]
byteorder = "1.1"
error-chain = "0.11"
futures = "0.1.16"
futures-cpupool = "0.1"
log = "0.3"
parking_lot = "0.4"
rustc-hex = "1.0"
serde = "1.0"
serde_json = "1.0"
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git" }
jsonrpc-http-server = { git = "https://github.com/paritytech/jsonrpc.git" }
web3 = { git = "https://github.com/tomusdrw/rust-web3.git" }

ethcore-bigint = { git = "https://github.com/paritytech/parity.git" }
ethcore = { git = "https://github.com/paritytech/parity.git" }
rlp = { git = "https://github.com/paritytech/parity.git" }

[dev-dependencies]
tempdir = "0.3"
env_logger = "0.4"
